tests/NormalTests/paczka1/small_fuzzy/11300180.err
Error in line 2: KWCegdDt1Mv A171 49,1
Error in line 12: CFaSB S551 88,82
